--- a/_posts/2019-02-25-项目编译报POD脚本没有权限.md
+++ b/_posts/2019-02-25-项目编译报POD脚本没有权限.md
@@ -1,13 +1,11 @@
 --- 
-layout: post 
-title: Xcode 10.1 pod脚本报错     
-description: Pods-便民通-resources.sh: Permission denied \
-        Command PhaseScriptExecution failed with a nonzero exit code
-
-date: 2019-02-25    
+layout: postcn 
+title: "Xcode 10.1 pod脚本报错"     
+description: "Pods-便民通-resources.sh Permission denied Command PhaseScriptExecution failed with a nonzero exit code"
+date: 2019-02-25
 nav: post     
-stickie: false         
-category: ios        
+lang: cn
+category: ios       
 tags: [xcode]     
 --- 
 * content 
