--- a/_posts/2019-02-27-改变Dialog大小.md
+++ b/_posts/2019-02-27-改变Dialog大小.md
@@ -1,10 +1,10 @@
 --- 
-layout: post 
-title: Android Dialog自定义大小     
-description: Dialog计算View的内容来决定大小
+layout: postcn 
+title: "Android Dialog自定义大小"
+description: "Dialog计算View的内容来决定大小"
 date: 2019-02-25    
-nav: post     
-stickie: false         
+nav: post
+lang: cn
 category: android       
 tags: [view, dialog]     
 --- 
