--- a/_posts/2019-02-27-软键盘隐藏无效.md
+++ b/_posts/2019-02-27-软键盘隐藏无效.md
@@ -1,10 +1,10 @@
 --- 
-layout: post 
-title: Android hideSoftInputFromWindow无效     
-description: Android hideSoftInputFromWindow无效
+layout: postcn 
+title: "Android hideSoftInputFromWindow无效"
+description: "Android hideSoftInputFromWindow无效"
 date: 2019-02-25    
 nav: post     
-stickie: false         
+lang: cn
 category: android        
 tags: [SoftInput]     
 --- 
