--- a/_posts/2019-07-23-Xcode升级到12后项目报错.md
+++ b/_posts/2019-07-23-Xcode升级到12后项目报错.md
@@ -1,18 +1,10 @@
----
-layout: post
-title: Xcode 升级到12报错
-categories: [ios]
-tags: [error, xcode]
-date: 2019-07-23
----
-
 --- 
-layout: post 
-title: Xcode 升级到12报错     
-description: ailed to find or create execution context for description <IBCocoaTouchPlatformToolDescription: 0x7fa8bad9a6f0>
+layout: postcn 
+title: "Xcode 升级到12报错"
+description: "ailed to find or create execution context for description"
 date: 2019-07-23   
 nav: post     
-stickie: false         
+lang: cn
 category: ios        
 tags: [xcode]     
 --- 
