--- a/_posts/2019-08-13-Brew换源.md
+++ b/_posts/2019-08-13-Brew换源.md
@@ -1,10 +1,10 @@
 ---
-layout: post 
-title: macOS brew换源     
-description: macOS brew换源
+layout: postcn 
+title: "macOS brew换源"
+description: "macOS brew换源"
 date: 2019-08-13    
 nav: post     
-stickie: false         
+lang: cn
 category: macOS        
 tags: [brew]     
 --- 
