--- a/_posts/2019-10-08-Xcode因磁盘空间不足升级失败.md
+++ b/_posts/2019-10-08-Xcode因磁盘空间不足升级失败.md
@@ -1,10 +1,10 @@
 --- 
-layout: post 
-title: Install Xcode 11.1 Not enough disk space     
-description: Install Xcode 11.1 Not enough disk space
+layout: postcn 
+title: "Install Xcode 11.1 Not enough disk space"
+description: "Install Xcode 11.1 Not enough disk space"
 date: 2019-10-08   
 nav: post     
-stickie: false         
+lang: cn
 category: macOS       
 tags: [xcode, macOS]     
 --- 
