--- a/_posts/2019-02-25-POD脚本执行没有权限.md
+++ b/_posts/2019-02-25-POD脚本执行没有权限.md
@@ -4,6 +4,7 @@ title: "Xcode 10.1 pod脚本报错"
 categories: ios
 tags: [xcode]
 date: 2019-02-25
+excerpt: "POD脚本没有权限执行"
 ---
 
 ## Xcode 10.1 导入项目后pod脚本报错
