--- a/_posts/2019-02-27-软键盘不能隐藏.md
+++ b/_posts/2019-02-27-软键盘不能隐藏.md
@@ -4,6 +4,7 @@ title: "Android hideSoftInputFromWindow无效"
 categories: android
 tags: [soft_input]
 date: 2019-02-25
+excerpt: "隐藏软键盘无效"
 ---
 
 ## Android hideSoftInputFromWindow无效
