--- a/_posts/2019-03-27-AS停止在更新索引.md
+++ b/_posts/2019-03-27-AS停止在更新索引.md
@@ -4,6 +4,7 @@ title: "AndroidStudio停止在更新索引"
 categories: android
 tags: [android_studio]
 date: 2019-02-25
+excerpt: "AS停止在更新索引状态"
 ---
 
 ## 把项目换了个位置，重新打开卡在Indexing paused due to batch updated
