--- a/_posts/2019-10-08-磁盘空间小导致Xcode升级失败.md
+++ b/_posts/2019-10-08-磁盘空间小导致Xcode升级失败.md
@@ -4,6 +4,7 @@ title: "Install Xcode 11.1 Not enough disk space"
 categories: macOS
 tags: [xcode]
 date: 2019-10-08
+excerpt: "macOS安装Xode提示空间不够"
 ---
 
 ## 安装Xcode 11.1 提示Not enough disk space
