--- a/_posts/2019-11-19-Kali系统安装.md
+++ b/_posts/2019-11-19-Kali系统安装.md
@@ -4,10 +4,8 @@ title: "Kali linux 安装"
 categories: kali
 tags: [kali]
 date: 2019-11-19
-content: adfasdfasdf
+excerpt: "在RaspberryPi上安装KaliLinux"
 ---
-* content
-{:toc}
 
 ## Raspberry pi 3/b+ 安装kali linux
 
