--- a/_posts/2019-02-27-修改Dialog大小.md
+++ b/_posts/2019-02-27-修改Dialog大小.md
@@ -4,6 +4,7 @@ title: "Android Dialog自定义大小"
 categories: android
 tags: [view, dialog]
 date: 2019-02-25
+excerpt: "动态修改Dialog大小"
 ---
 
 ## Android Dialog自定义大小
