--- a/_posts/2019-07-15-WebView不能发送输入框点击事件.md
+++ b/_posts/2019-07-15-WebView不能发送输入框点击事件.md
@@ -4,6 +4,7 @@ title: "ios11.2系统flutter使用webview_flutter不能弹出日历"
 categories: flutter
 tags: [webview]
 date: 2019-02-25
+excerpt: "Flutter中WebView不能拦截输入框点击事件"
 ---
 
 ## Flutter使用[webview_flutter](https://github.com/flutter/plugins/tree/master/packages/webview_flutter)时,跳转不了about:blank
