--- a/_posts/2019-10-08-磁盘空间小导致Xcode升级失败.md
+++ b/_posts/2019-10-08-磁盘空间小导致Xcode升级失败.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Install Xcode 11.1 Not enough disk space"
-categories: macOS
+categories: macos
 tags: [xcode]
 date: 2019-10-08
 excerpt: "macOS安装Xode提示空间不够"
