--- a/_posts/2019-11-19-Kali系统安装.md
+++ b/_posts/2019-11-19-Kali系统安装.md
@@ -7,8 +7,51 @@ date: 2019-11-19
 excerpt: "在RaspberryPi上安装KaliLinux"
 ---
 
-## Raspberry pi 3/b+ 安装kali linux
+# Raspberry pi 3/b+ 安装kali linux
 
-### 准备
+## 1. 准备
+
+* Respberry pi 3/b+
+* SDcard 32G
+* usb 键盘/鼠标
+* 读卡器
+
+## 2. 烧录
+
+### Unix
+
+	使用shasum校验文件正确性
+	dd if=kali-2.1.2-rpi.img of=/dev/sdb bs=512k
+	
+### Windows
+
+	certutil -hashfile yourfilename.ext SHA1
+	使用win32diskmanager写入sdcard
+	UltraISO 写入硬盘  一般选择USB-HDD+ 不能启动时换RWA
+
+## 3. 扩展分区
+烧录后分区只站了sdcard一部分, 所以需要扩展分区.
+	
+	使用Gparted工具扩展
 
 
+## 4. 开启ssh
+Kali是debian的分支, 所以也采用Systemd
+
+	systemctl start ssh
+	systemctl enable ssh
+
+## 5. 开机自动进入图形界面
+
+	vim /etc/lightdm/lightdm.conf
+
+	#autologin-user=
+	#autologin-user-timeout=0
+
+	改成
+
+	autologin-user=root
+	autologin-user-timeout=0
+
+	vim /etc/pam.d/lightdm-autologin
+	注释 auth required pam_succeed_if.so user != root quiet_success
