--- a/_posts/2019-11-19-Kali系统安装.md
+++ b/_posts/2019-11-19-Kali系统安装.md
@@ -55,3 +55,7 @@ Kali是debian的分支, 所以也采用Systemd
 
 	vim /etc/pam.d/lightdm-autologin
 	注释 auth required pam_succeed_if.so user != root quiet_success
+
+## 6. 配置无线
+networkctl list 查看网络设备
+systemctl start systemd-networkd 开启网络管理服务
