--- a/_posts/2020-01-15-makefile.md
+++ b/_posts/2020-01-15-makefile.md
@@ -190,3 +190,94 @@ ifeq ifneq ifdef ifndef
   $(wildcard pattern…) # 通配符在target里自动展开
   , 然而在变量和函数里不能展开, 这时需要使用通配符函数
 
+
+### 产生Makefile的工具
+make项目有很多共通的步骤, 每个项目都要写, 并且配置target很繁琐, 每个人都要学习Makefile
+语法, 所以诞生产生Makefile的工具, 主要负责:
+
+|              | autotools                                      | cmake                                       |
+|--------------|------------------------------------------------|---------------------------------------------|
+| 变量定义     | name=...                                       | set(name, "...")                            |
+|--------------|------------------------------------------------|---------------------------------------------|
+| 环境检测     | AC_INIT                                        | find_library(lib libname pathllist)         |
+|              | 测试程序                                       | find_package(packename)                     |
+|              | AC_PROG_CC                                     | find_path(var name pathlist)                |
+|              | 测试函数库                                     | find_program(var name pathlist)             |
+|              | AC_CHECK_LIB([pthread], [pthread_rwlock_init]) |                                             |
+|              | AC_PROG_RANLIB                                 |                                             |
+|              | 测试头文件                                     |                                             |
+|              | 测试类型定义                                   |                                             |
+|              | 测试结构                                       |                                             |
+|              | 测试编译器特性                                 |                                             |
+|              | 测试库函数                                     |                                             |
+|              | 测试系统调用                                   |                                             |
+|              | AC_OUTPUT                                      |                                             |
+|--------------|------------------------------------------------|---------------------------------------------|
+| 子目录       | SUBDIRS=                                       | add_subdirectory(list)                      |
+|--------------|------------------------------------------------|---------------------------------------------|
+| 可执行文件   | bin_PROGRAMS=binname                           | add_executable(binname ${sources})          |
+|              | binname_SOURCES=                               | target_link_libraries(binname librarylist)  |
+|              | binname_LDADD=                                 |                                             |
+|              | binname_CFLAGS=                                |                                             |
+|              | binname_LDFLAGS=                               |                                             |
+|--------------|------------------------------------------------|---------------------------------------------|
+| 动态库       | lib_LIBRARIES=libname.so                       | add_library(libname shared ${source} )      |
+|              | libname_SOURCES=                               |                                             |
+|--------------|------------------------------------------------|---------------------------------------------|
+| 静态库       | lib_LIBRARIES=libname.a                        | add_library(libname static ${source} )      |
+|              | libname_a_SOURCES=                             |                                             |
+|--------------|------------------------------------------------|---------------------------------------------|
+| 头文件       | INCLUDES=                                      | include_directories(list)                   |
+|              | include_HEADES=  或CFLAGS=-I                   |                                             |
+|--------------|------------------------------------------------|---------------------------------------------|
+| 源码搜索     |                                                | aux_source_directories(. list)              |
+|--------------|------------------------------------------------|---------------------------------------------|
+| 依赖库       | LIBS=                                          | target_link_libraries(binname librarylist)  |
+|              | LDADD=                                         |                                             |
+|--------------|------------------------------------------------|---------------------------------------------|
+| 标志         | CFLAGS=                                        | set(CMAKE_C_FLAGS  ...)                     |
+|              | LDFLAGS=                                       |                                             |
+|--------------|------------------------------------------------|---------------------------------------------|
+| libtool      | AC_PROG_LIBTOOL                                |                                             |
+|              | lib_LTLIBRARIES=name.la                        |                                             |
+|              | name_la_SOURCES=                               |                                             |
+|--------------|------------------------------------------------|---------------------------------------------|
+| 安装设置     |                                                | install(TARGETS targets...                  |
+|              |                                                | [[ARCHIVE,LIBRARY,RUNTIME][DESTINATION      |
+|              |                                                | < dir >][PERMISSIONS permissions...]        |
+|              |                                                | [CONFIGURATIONS[Debug,Release,...]]         |
+|              |                                                | [COMPONENT < component >][OPTIONAL]] [...]) |
+|--------------|------------------------------------------------|---------------------------------------------|
+| 其他文件     | EXTRA_DIST                                     | install(FILES files.. )                     |
+|              |                                                | install(DIRECTORY dirs..)                   |
+|--------------|------------------------------------------------|---------------------------------------------|
+| 条件语句     | 使用Make的条件语句                             | if(my)                                      |
+|              |                                                | else(my)                                    |
+|              |                                                | endif(my)                                   |
+|              |                                                | while(condition)                            |
+|              |                                                | endwhile(condition)                         |
+|--------------|------------------------------------------------|---------------------------------------------|
+| 执行外部命令 |                                                | exec_program(commd )                        |
+|--------------|------------------------------------------------|---------------------------------------------|
+| 子模块       |                                                | include()                                   |
+| 信息输出     |                                                | messge(STATUS "messge")                     |
+| 项目         |                                                | project(name)                               |
+|--------------|------------------------------------------------|---------------------------------------------|
+
+
+
+
+#### Autoconf + Automake
+1. 运行autoscan命令
+2. 将configure.scan 文件重命名为configure.in，并修改configure.in文件
+3. 在project目录下新建Makefile.am文件，并在core和shell目录下也新建makefile.am文件
+4. 在project目录下新建NEWS、 README、 ChangeLog 、AUTHORS文件
+5. 将/usr/share/automake-1.X/目录下的depcomp和complie文件拷贝到本目录下
+6. 运行aclocal命令
+7. 运行autoconf命令
+8. 运行automake -a命令
+9. 运行./confiugre脚本
+
+#### cmake
+1. 编写CMakeLists.txt
+2. 运行cmake命令
