--- a/_posts/2020-01-15-makefile.md
+++ b/_posts/2020-01-15-makefile.md
@@ -8,7 +8,7 @@ excerpt: "Makefile"
 ---
 
 ## Make
-[Make manual](https://www.gnu.org/software/make/manual/html_node/Overview.html#Overview)
+[Make manual](https://www.gnu.org/software/make/manual/html\_node/Overview.html#Overview)
 
 1. 会按照顺序读取GNUmakefile, makefile and Makefile. ( Recommend Makefile. )
 2. 根据文件修改日期判断是否需要重新生成
@@ -107,7 +107,7 @@ phony target:
 通配符: "\*"表示所以 "~"表示主目录
 
 ### 隐式规则(implicit rule)
-[内建隐式规则](https://www.gnu.org/software/make/manual/html_node/Catalogue-of-Rules.html#Catalogue-of-Rules)
+[内建隐式规则](https://www.gnu.org/software/make/manual/html\_node/Catalogue-of-Rules.html#Catalogue-of-Rules)
 编写没有规则的target, 或者不写target, 隐匿规则就会启动
 
 隐式推断:
@@ -123,11 +123,11 @@ phony target:
 5. .INTERMEDIATE          : 视为中间目标
 6. .SECONDARY             : 视为中间目标, 但不删除
 7. .SECONDEXPANSION       : 第二次扩展
-8. .DELETE_ON_ERROR       : 会删除目标
+8. .DELETE\_ON\_ERROR       : 会删除目标
 9. .IGNORE                : 会忽略recipe执行错误
-10. .LOW_RESOLUTION_TIME  : 用分辨率时间(忽略秒或分)来判断是否过期
+10. .LOW\_RESOLUTION\_TIME  : 用分辨率时间(忽略秒或分)来判断是否过期
 11. .SILENT               : 不输出执行过程和结果
-12. .EXPORT_ALL_VARIABLES : 导出所有变量到子进程
+12. .EXPORT\_ALL\_VARIABLES : 导出所有变量到子进程
 13. .NOTPARALLEL          : 顺序执行, 非并行, 递归调用make时任然并行
 14. .ONESHELL             : recipe在一个shell中调用, 不会分开
 15. .POSIX                : 按照posix方式检查及运行
@@ -155,19 +155,19 @@ phony target:
 
 
 特殊变量:
-  1. MAKEFILE_LIST
-  2. .DEFAULT_GOAL
-  3. MAKE_RESTARTS
-  4. MAKE_TERMOUT
-  5. MAKE_TERMERR
+  1. MAKEFILE\_LIST
+  2. .DEFAULT\_GOAL
+  3. MAKE\_RESTARTS
+  4. MAKE\_TERMOUT
+  5. MAKE\_TERMERR
   6. .RECIPEPREFIX
   7. .VARIABLES
   8. .FEATURES
-  9. .INCLUDE_DIRS
+  9. .INCLUDE\_DIRS
 
 引用替换: ‘$(var:a=b)’ (or ‘${var:a=b}’)
 
-[自动变量](https://www.gnu.org/software/make/manual/html_node/Automatic-Variables.html#Automatic-Variables)
+[自动变量](https://www.gnu.org/software/make/manual/html\_node/Automatic-Variables.html#Automatic-Variables)
 在recipe中使用自动变量, 可以自动引用target name, prerequisites等
 
 ### 条件
@@ -183,7 +183,7 @@ ifeq ifneq ifdef ifndef
 
 
 ### 函数
-[DOC](https://www.gnu.org/software/make/manual/html_node/Text-Functions.html#Text-Functions)
+[DOC](https://www.gnu.org/software/make/manual/html\_node/Text-Functions.html#Text-Functions)
 
   $(function arguments)
 
@@ -199,48 +199,48 @@ make项目有很多共通的步骤, 每个项目都要写, 并且配置target很
 |--------------|------------------------------------------------|---------------------------------------------|
 | 变量定义     | name=...                                       | set(name, "...")                            |
 |--------------|------------------------------------------------|---------------------------------------------|
-| 环境检测     | AC_INIT                                        | find_library(lib libname pathllist)         |
-|              | 测试程序                                       | find_package(packename)                     |
-|              | AC_PROG_CC                                     | find_path(var name pathlist)                |
-|              | 测试函数库                                     | find_program(var name pathlist)             |
-|              | AC_CHECK_LIB([pthread], [pthread_rwlock_init]) |                                             |
-|              | AC_PROG_RANLIB                                 |                                             |
+| 环境检测     | AC\_INIT                                        | find\_library(lib libname pathllist)         |
+|              | 测试程序                                       | find\_package(packename)                     |
+|              | AC\_PROG\_CC                                     | find\_path(var name pathlist)                |
+|              | 测试函数库                                     | find\_program(var name pathlist)             |
+|              | AC\_CHECK\_LIB([pthread], [pthread\_rwlock\_init]) |                                             |
+|              | AC\_PROG\_RANLIB                                 |                                             |
 |              | 测试头文件                                     |                                             |
 |              | 测试类型定义                                   |                                             |
 |              | 测试结构                                       |                                             |
 |              | 测试编译器特性                                 |                                             |
 |              | 测试库函数                                     |                                             |
 |              | 测试系统调用                                   |                                             |
-|              | AC_OUTPUT                                      |                                             |
+|              | AC\_OUTPUT                                      |                                             |
 |--------------|------------------------------------------------|---------------------------------------------|
-| 子目录       | SUBDIRS=                                       | add_subdirectory(list)                      |
+| 子目录       | SUBDIRS=                                       | add\_subdirectory(list)                      |
 |--------------|------------------------------------------------|---------------------------------------------|
-| 可执行文件   | bin_PROGRAMS=binname                           | add_executable(binname ${sources})          |
-|              | binname_SOURCES=                               | target_link_libraries(binname librarylist)  |
-|              | binname_LDADD=                                 |                                             |
-|              | binname_CFLAGS=                                |                                             |
-|              | binname_LDFLAGS=                               |                                             |
+| 可执行文件   | bin\_PROGRAMS=binname                           | add\_executable(binname ${sources})          |
+|              | binname\_SOURCES=                               | target\_link\_libraries(binname librarylist)  |
+|              | binname\_LDADD=                                 |                                             |
+|              | binname\_CFLAGS=                                |                                             |
+|              | binname\_LDFLAGS=                               |                                             |
 |--------------|------------------------------------------------|---------------------------------------------|
-| 动态库       | lib_LIBRARIES=libname.so                       | add_library(libname shared ${source} )      |
-|              | libname_SOURCES=                               |                                             |
+| 动态库       | lib\_LIBRARIES=libname.so                       | add\_library(libname shared ${source} )      |
+|              | libname\_SOURCES=                               |                                             |
 |--------------|------------------------------------------------|---------------------------------------------|
-| 静态库       | lib_LIBRARIES=libname.a                        | add_library(libname static ${source} )      |
-|              | libname_a_SOURCES=                             |                                             |
+| 静态库       | lib\_LIBRARIES=libname.a                        | add\_library(libname static ${source} )      |
+|              | libname\_a\_SOURCES=                             |                                             |
 |--------------|------------------------------------------------|---------------------------------------------|
-| 头文件       | INCLUDES=                                      | include_directories(list)                   |
-|              | include_HEADES=  或CFLAGS=-I                   |                                             |
+| 头文件       | INCLUDES=                                      | include\_directories(list)                   |
+|              | include\_HEADES=  或CFLAGS=-I                   |                                             |
 |--------------|------------------------------------------------|---------------------------------------------|
-| 源码搜索     |                                                | aux_source_directories(. list)              |
+| 源码搜索     |                                                | aux\_source\_directories(. list)              |
 |--------------|------------------------------------------------|---------------------------------------------|
-| 依赖库       | LIBS=                                          | target_link_libraries(binname librarylist)  |
+| 依赖库       | LIBS=                                          | target\_link\_libraries(binname librarylist)  |
 |              | LDADD=                                         |                                             |
 |--------------|------------------------------------------------|---------------------------------------------|
-| 标志         | CFLAGS=                                        | set(CMAKE_C_FLAGS  ...)                     |
+| 标志         | CFLAGS=                                        | set(CMAKE\_C\_FLAGS  ...)                     |
 |              | LDFLAGS=                                       |                                             |
 |--------------|------------------------------------------------|---------------------------------------------|
-| libtool      | AC_PROG_LIBTOOL                                |                                             |
-|              | lib_LTLIBRARIES=name.la                        |                                             |
-|              | name_la_SOURCES=                               |                                             |
+| libtool      | AC\_PROG\_LIBTOOL                                |                                             |
+|              | lib\_LTLIBRARIES=name.la                        |                                             |
+|              | name\_la\_SOURCES=                               |                                             |
 |--------------|------------------------------------------------|---------------------------------------------|
 | 安装设置     |                                                | install(TARGETS targets...                  |
 |              |                                                | [[ARCHIVE,LIBRARY,RUNTIME][DESTINATION      |
@@ -248,7 +248,7 @@ make项目有很多共通的步骤, 每个项目都要写, 并且配置target很
 |              |                                                | [CONFIGURATIONS[Debug,Release,...]]         |
 |              |                                                | [COMPONENT < component >][OPTIONAL]] [...]) |
 |--------------|------------------------------------------------|---------------------------------------------|
-| 其他文件     | EXTRA_DIST                                     | install(FILES files.. )                     |
+| 其他文件     | EXTRA\_DIST                                     | install(FILES files.. )                     |
 |              |                                                | install(DIRECTORY dirs..)                   |
 |--------------|------------------------------------------------|---------------------------------------------|
 | 条件语句     | 使用Make的条件语句                             | if(my)                                      |
@@ -257,7 +257,7 @@ make项目有很多共通的步骤, 每个项目都要写, 并且配置target很
 |              |                                                | while(condition)                            |
 |              |                                                | endwhile(condition)                         |
 |--------------|------------------------------------------------|---------------------------------------------|
-| 执行外部命令 |                                                | exec_program(commd )                        |
+| 执行外部命令 |                                                | exec\_program(commd )                        |
 |--------------|------------------------------------------------|---------------------------------------------|
 | 子模块       |                                                | include()                                   |
 | 信息输出     |                                                | messge(STATUS "messge")                     |
