--- a/_posts/2020-01-16-jni.md
+++ b/_posts/2020-01-16-jni.md
@@ -243,3 +243,199 @@ JNI定义的值:
 
   * [Java Native Interface Specification—Contents](https://docs.oracle.com/javase/7/docs/technotes/guides/jni/spec/jniTOC.html)
 
+
+### Android jni
+
+### JavaVM 和 JNIEnv
+> JNI的关键两个数据结构, 是一个函数表的指针(C++中是类), JavaVM可以创建, 销毁虚拟机.
+> 理论上一个进程可以有多个虚拟机, 但是Android, 一个进程只能有一个虚拟机
+
+> JNIEnv是线程本地的, 如果一个线程没有自己的JNIEnv, 那么需要使用JavaVM, GetEnv函数
+> 获取
+
+> JavaVM和JNIEnv在C和C++中的实现不一样, 所以不要在头文件中引用`JNIEnv`, 不然需要
+> 使用`#ifdef __cplusplus`在一些额外的处理
+
+### 线程
+> Thread.start(), 创建的线程是Linux线程, 由kernel调度. 本地方法可以使用pthread_create
+> 或者std:thread创建新线程, 但是这种创建的线程没有`JNIEnv`.
+
+> 可以使用`AttachCurrentThread()`和`AttachCurrentThreadAsDaemon()`在本地线程绑定到
+> JavaVM中. JavaVM会把绑定的线程添加到线程组中, 并且可以显示调度信息.
+
+> Android不会停止执行本地代码, 当在进程中垃圾回收或者有个Debug请求时, Android会
+> 在下次JNI函数调用时暂停
+
+> 绑定的本地线程需要在退出前调用`DetachCurrentThread()`. 可以使用`pthread_key_create()`
+> 时传递的析构函数, 来调用这个解绑函数.
+
+### jclass, jmethodID, and jfieldID
+* FindClass
+* GetFieldID
+* GetIntField
+
+> 执行函数, 或者读取字段, 都需要对象的引用和函数或字段的ID. ID是Java对象在本地代码中
+> 呈现的数据结构的指针, 在查找上会耗费一些性能. 
+
+> 缓存ID来提供性能, 因为Android中只有一个JavaVM, 因此类在虚拟机中是静态不变的. 但
+> 为了保证类不会从Classloader中卸载, 需要让jclass引用成全局引用, 使用`NewGlobalRef`.
+
+> 如果要让类卸载后重新加载时, 重新获取缓存ID, 那么本地需要实现`nativeClassInit`, 当类
+> 初始化时只执行一次.
+
+    companion object {
+      /*
+       * We use a static class initializer to allow the native code to cache some
+       * field offsets. This native function looks up and caches interesting
+       * class/field/method IDs. Throws on failure.
+       */
+      private external fun nativeInit()
+
+      init {
+          nativeInit()
+      }
+    }
+
+
+### Local and global references
+* local references: 只在当前函数, 当前线程有效. 如果对象在函数返回后依然存在
+  , 引用也是无效的
+* global references: 在当前线程有效, 需要手动删除.
+
+> 所有本地方法参数和JNI函数的返回, 都是本地引用
+
+> 本地引用只有调用`NewGlobalRef`和`NewWeakGlobalRef`创建全局引用, 全局引用需要
+> 调用`DeleteGlobalRef`来释放自己.
+
+> 每次调用`NewGlobalRef`返回的值是不一样的, 需要使用`IsSameObject`函数来判断是不是
+> 同一个对象. 而且不能假定引用的值是唯一的32位数
+
+> 如果本地引用过多的话, 也需要手动释放. 因为虚拟机只有在本地方法返回后释放本地引用.
+> Android实现最多只能有16个引用, 如果想要更多, 需要手动删除引用, 或者使用`EnsureLocalCapacity`
+> 和`PushLocalFrame`创建更多的引用.
+
+> jfieldIDs 和 jmethodIDs 不是对象的引用, 是不透明对象, 在线程之间有效
+
+> `AttachCurrentThread`的线程运行中, 不会自动删除本地引用, 所以最好在绑定线程和循环创建
+> 引用时, 手动删除本地引用.
+
+### UTF-8 and UTF-16 String
+> Java是使用UTF-16编码, JNI使用的是修改后的UTF-8, 好处是可以使用`\0`结尾的字符串, 坏处
+> 是utf-8字符串不能好好的工作. 推荐使用UTF-16
+
+> JNI中Get字符串是C指针, 不是本地引用, 所以需要手动释放`Release`. 传递给NewStringUTF应用是
+> mUTF-8, 需要过滤掉不支持的字符.
+
+### 访问数组
+> 使用`Get<PrimitiveType>ArrayElements`获取指向数据的指针(1. 返回实际数据的指针
+> 需要固化数组对象, 2. 返回复制后地址的指针), 需要手动释放`Release`. 如果Get数组失败
+> , 应该避免释放空指针
+
+> `isCopy`函数可以判断数组是否是复制的.
+
+数组`Release`有个mode参数, 有三个值:
+  
+  * 0 : 数组对象没有固化, 把副本复制到原处, 并释放副本.
+  * JNI_COMMIT : 把副本复制到原处, 不释放副本, 需要使用其他标志再释放一次副本.
+  * JNI_ABORT : 数组没有固化, 释放副本, 丢弃修改.
+
+> `Get<Type>ArrayRegion` 和 `Set<Type>ArrayRegion`, `GetStringRegion` 和 `GetStringUTFRegion`
+> 会读取一个数组的一部分, 并且释放原数组
+
+    env->GetByteArrayRegion(array, 0, len, buffer);
+    等效
+    jbyte* data = env->GetByteArrayElements(array, NULL);
+    if (data != NULL) {
+        memcpy(buffer, data, len);
+        env->ReleaseByteArrayElements(array, data, JNI_ABORT);
+    }
+
+
+### 扩展检查
+在调用`JavaVM`和`JNIEnv`函数会先执行一系列检查, CheckJNI.
+
+  * 数组：尝试分配负数大小的数组。
+  * 错误的指针：将错误的jarray / jclass / jobject / jstring传递给JNI调用，或者将NULL指针传递给具有非空参数的JNI调用。
+  * 类名：将类名的“ java / lang / String”样式以外的任何内容传递给JNI调用。
+  * 关键调用：在“关键”获取及其对应的版本之间进行JNI调用。
+  * Direct ByteBuffers：将错误的参数传递给NewDirectByteBuffer。
+  * 例外：有待处理的例外时拨打JNI电话。
+  * JNIEnv * s：从错误的线程使用JNIEnv *。
+  * jfieldIDs：使用NULL jfieldID，或使用jfieldID将字段设置为错误类型的值（例如，尝试将StringBuilder分配给String字段），或将jfieldID用作静态字段以设置实例字段或 反之亦然，或者将一个类的jfieldID与另一个类的实例一起使用。
+  * jmethodID：在进行Call * Method JNI调用时使用了错误的jmethodID类型：错误的返回类型，静态/非静态不匹配，“ this”的类型错误（对于非静态调用）或类（错误的静态调用）。
+  * 参考：在错误的参考类型上使用DeleteGlobalRef / DeleteLocalRef。
+  * 释放模式：将错误的释放模式传递给释放调用（0，JNI_ABORT或JNI_COMMIT以外的其他值）。
+  * 类型安全：从您的本机方法返回不兼容的类型（例如，从声明为返回String的方法中返回StringBuilder）。
+  * UTF-8：将无效的修改后的UTF-8字节序列传递给JNI调用。
+
+> 虚拟机自动打开
+> root设备使用: adb shell stop; adb shell setprop dalvik.vm.checkjni true; adb shell start
+> 常规设备使用: adb shell setprop debug.checkjni 1
+> 只使用当前应用: android:debuggable
+
+### 加载动态库
+`System.loadLibrary`, 老版本有问题, 需要使用`ReLinker.loadLibrary`.
+
+    companion object {
+        init {
+            System.loadLibrary("fubar")
+        }
+    }
+
+    JNIEXPORT jint JNI_OnLoad(JavaVM* vm, void* reserved) {
+        JNIEnv* env;
+        if (vm->GetEnv(reinterpret_cast<void**>(&env), JNI_VERSION_1_6) != JNI_OK) {
+            return JNI_ERR;
+        }
+
+        // Find your class. JNI_OnLoad is called from the correct class loader context for this to work.
+        jclass c = env->FindClass("com/example/app/package/MyClass");
+        if (c == nullptr) return JNI_ERR;
+
+        // Register your class' native methods.
+        static const JNINativeMethod methods[] = {
+            {"nativeFoo", "()V", reinterpret_cast(nativeFoo)},
+            {"nativeBar", "(Ljava/lang/String;I)Z", reinterpret_cast(nativeBar)},
+        };
+        int rc = env->RegisterNatives(c, methods, sizeof(methods)/sizeof(JNINativeMethod));
+        if (rc != JNI_OK) return rc;
+
+        return JNI_VERSION_1_6;
+    }
+
+### Java与本地方式间共享数据
+1. 使用byte[] java快, 本地慢
+2. 使用java.nio.ByteBuffer.allocateDirect AND JNI NewDirectByteBuffer 本地快, java慢
+
+选择哪一个:
+  1. 由数据处理端决定, 哪端处理数据多就使用哪个
+  2. 由最终数据格式决定(如果最终byte[], 那么就不要使用allocateDirect)
+
+
+
+### 支持64位
+使用long来表示指针
+
+### Android 不支持的JNI特性
+  * DefineClass, Android不使用Java字节码, 所以不能传递类的二进制数据
+
+### 主要问题
+
+#### FAQ: Why do I get UnsatisfiedLinkError?
+
+  java.lang.UnsatisfiedLinkError: Library foo not found
+
+库没有找到, 或者不能打开. 
+
+  * 使用 adb shell ls -l <path> 查看库是否存在, 是否能访问
+  * 不是使用NDK构建的, 有可能有问题
+
+W/dalvikvm(  880): No implementation found for native LFoo;.myfunc ()V
+
+  没有找到匹配的函数:
+    * 该库没有加载
+    * 名称不正确或者签名不匹配
+
+需要正确的使用extern "C" (表示这部分代码使用C规则编译), 推荐使用javah来生成jni.h
+
+
