--- a/_posts/2019-11-19-Kali系统安装.md
+++ b/_posts/2019-11-19-Kali系统安装.md
@@ -29,6 +29,15 @@ excerpt: "在RaspberryPi上安装KaliLinux"
 	使用win32diskmanager写入sdcard
 	UltraISO 写入硬盘  一般选择USB-HDD+ 不能启动时换RWA
 
+## 3. 换源
+/etc/apt/sources.list
+
+## 4. 安装raspi-config
+http://mirrors.ustc.edu.cn/archive.raspberrypi.org/debian/pool/main/r/raspi-config/raspi-config_20200226_all.deb
+
+## 5.安装中文输入法
+
+
 ## 3. 扩展分区
 烧录后分区只站了sdcard一部分, 所以需要扩展分区.
 	
