--- a/_posts/2019-11-19-Kali系统安装.md
+++ b/_posts/2019-11-19-Kali系统安装.md
@@ -30,27 +30,33 @@ excerpt: "在RaspberryPi上安装KaliLinux"
 	UltraISO 写入硬盘  一般选择USB-HDD+ 不能启动时换RWA
 
 ## 3. 换源
-/etc/apt/sources.list
+
+  /etc/apt/sources.list
 
 ## 4. 安装raspi-config
-http://mirrors.ustc.edu.cn/archive.raspberrypi.org/debian/pool/main/r/raspi-config/raspi-config_20200226_all.deb
+
+  wget http://mirrors.ustc.edu.cn/archive.raspberrypi.org/debian/pool/main/r/raspi-config/raspi-config_20200226_all.deb
+  dpkg -i raspi-config_20200226_all.deb
+  apt --fix-broken install
 
 ## 5.安装中文输入法
 
+  apt install fcitx fcitx-table-wubi fonts-wqy-zenhei
 
-## 3. 扩展分区
+## 6. 扩展分区
 烧录后分区只站了sdcard一部分, 所以需要扩展分区.
 	
-	使用Gparted工具扩展
+	1. macos使用Gparted工具扩展
+  2. 使用raspi-config
 
 
-## 4. 开启ssh
+## 7. 开启ssh
 Kali是debian的分支, 所以也采用Systemd
 
 	systemctl start ssh
 	systemctl enable ssh
 
-## 5. 开机自动进入图形界面
+## 8. 开机自动进入图形界面
 
 	vim /etc/lightdm/lightdm.conf
 
@@ -65,6 +71,6 @@ Kali是debian的分支, 所以也采用Systemd
 	vim /etc/pam.d/lightdm-autologin
 	注释 auth required pam_succeed_if.so user != root quiet_success
 
-## 6. 配置无线
+## 9. 配置无线
 networkctl list 查看网络设备
 systemctl start systemd-networkd 开启网络管理服务
