--- a/_posts/2020-03-27-web-mvn.md
+++ b/_posts/2020-03-27-web-mvn.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: "Eclipse 导入Maven项目"
-categories: javaweb
-tags: [javaweb]
+categories: web
+tags: [mvn]
 date: 2020-03-27
 excerpt: "Eclipse 导入Maven项目"
 ---
@@ -28,5 +28,29 @@ excerpt: "Eclipse 导入Maven项目"
 
 ### 程序相关目录
 ** 程序相关目录（如安装目录，部署目录） 不要使用中文路径 **
+
+## VSCode 导入Maven项目
+
+> 项目使用Maven构建, 使用Spring Boot框架, 使用lombok
+
+安装插件: 
+
+    1. Java Extension Pack
+    2. Language Support for Java
+    3. Maven for Java
+    4. Spring Boot Extension
+
+配置VSCode:
+
+    1. 下载lombok.jar https://projectlombok.org/download
+    2. 进入vscode settings.json
+    3. -javaagent:\"/Volumes/store/lib/lombok.jar\" 加入 java.jdt.ls.vmargs
+    4. "org.eclipse.jdt.core.prefs": {
+            "org.eclipse.jdt.core.compiler.processAnnotations": "disabled",
+            "org.eclipse.jdt.apt.aptEnabled": false
+        }
+
+
+
 
 
