--- a/_posts/2020-03-27-web-mvn.md
+++ b/_posts/2020-03-27-web-mvn.md
@@ -50,6 +50,15 @@ excerpt: "Eclipse 导入Maven项目"
             "org.eclipse.jdt.apt.aptEnabled": false
         }
 
+pom.xml:
+
+    1. <m2e.apt.activation>disabled</m2e.apt.activation> 加入到properties
+    2. <dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.2</version>
+			<scope>provided</scope>
+		</dependency>
 
 
 
