opersys-process-sync

--- a/_posts/2020-04-27-ios-xcode.md
+++ b/_posts/2020-04-27-ios-xcode.md
@@ -34,3 +34,11 @@ excerpt: "iOS Xcode"
     self.window.backgroundColor = [UIColor whiteColor];
     self.window.rootViewController = [[ViewController alloc] init];;
     [self.window makeKeyAndVisible];
+
+### 3. Found an unexpected Mach-O header code: 0x72613c21
+
+> 添加Alipay人脸识别, 程序运行正常, 但是上传app store报错. 主要是`Build Phases`  
+> => `Copy Bundle Resources` 配置错误
+
+1. 有重置的bundle
+2. 包含framworks相关的文件
