mvn 设置编译版本

--- a/_posts/2020-03-27-web-mvn.md
+++ b/_posts/2020-03-27-web-mvn.md
@@ -61,5 +61,32 @@ pom.xml:
 		</dependency>
 
 
+### 设置默认编译JDK
 
+> mvn 默认会使用1.6编译项目, 如果使用更新版本JDK的特性, 会报`diamond operator   
+> is not supported in -source 1.6`.
+
+全局设置:
+
+    ${MAVEN_HOME}/conf/setting.xml, <profiles>标签下
+    <profile>
+        <id>jdk1.8</id>
+        <activation>
+            <activeByDefault>true</activeByDefault>
+            <jdk>1.8</jdk>
+        </activation>
+        <properties>
+            <maven.compiler.source>1.8</maven.compiler.source>
+            <maven.compiler.target>1.8</maven.compiler.target>
+            <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
+        </properties>
+    </profile>
+
+项目设置:
+
+      <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+      </properties>
 
