--- a/_posts/2020-03-27-web-mvn.md
+++ b/_posts/2020-03-27-web-mvn.md
@@ -90,3 +90,8 @@ pom.xml:
         <java.version>1.8</java.version>
       </properties>
 
+      <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+      </properties>
+
