--- a/_posts/2020-07-23-java-jdbc.md
+++ b/_posts/2020-07-23-java-jdbc.md
@@ -9,6 +9,10 @@ excerpt: "Java JDBC"
 
 ## Java JDBC
 
+### 驱动
+mysql jdbc driver 5.0: com.mysql.jdbc.Driver
+mysql jdbc driver 6.0: com.mysql.cj.jdbc.Driver
+
 
 ### Reference
 [Lesson: JDBC Basics](https://docs.oracle.com/javase/tutorial/jdbc/basics/index.html)
