--- a/_posts/2020-07-24-db-datax.md
+++ b/_posts/2020-07-24-db-datax.md
@@ -26,3 +26,4 @@ datax mysql插件使用 mysql-connector-java-5.1.34
 
 ### Reference
 [DataX](https://github.com/alibaba/DataX)
+[DATAX动态参数数据传递](https://www.cnblogs.com/bb1119/p/5384710.html)
