--- a/_posts/2020-03-27-web-mvn.md
+++ b/_posts/2020-03-27-web-mvn.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "Eclipse 导入Maven项目"
+title: "Maven项目 导入"
 categories: web
 tags: [mvn]
 date: 2020-03-27
-excerpt: "Eclipse 导入Maven项目"
+excerpt: "Maven项目 导入"
 ---
 
 ## Eclipse 导入Maven项目
