--- a/_posts/2020-06-08-tools-vim.md
+++ b/_posts/2020-06-08-tools-vim.md
@@ -9,6 +9,22 @@ excerpt: "VIM 正则表达式"
 
 ## VIM 正则表达式
 
+### [How to see which plugins are making Vim slow?](https://stackoverflow.com/questions/12213597/how-to-see-which-plugins-are-making-vim-slow)
+
+    1. 
+    :profile start profile.log
+    :profile func *
+    :profile file *
+    " At this point do slow actions
+    :profile pause
+    :noautocmd qall!
+
+    2. 
+    vim --startuptime timeCost.txt timeCost.txt
+
+    3. 
+    hyiltiz/vim-plugins-profile
+
 ### Magic
 
 > 有些字符是本身意义, 加上\又是另一种意义, VIM引入Magic模式, 不同模式下字符不同
