vim script and debug

--- a/_posts/2020-07-23-java-mvn.md
+++ b/_posts/2020-07-23-java-mvn.md
@@ -62,6 +62,15 @@ onejar-maven-plugin
 使用`mvn package assembly:single`
 
 
+### maven 设置javac 选项
+<compilerArgs>
+  <arg>-Xmaxerrs</arg>
+  <arg>1000</arg>
+  <arg>-Xlint</arg>
+  <arg>-J-Duser.language=en_us</arg>
+</compilerArgs>
+
+
 ### Reference
 [Apache Maven Project](http://maven.apache.org/guides/getting-started/maven-in-five-minutes.html)  
 [How to Create an Executable JAR with Maven](https://www.baeldung.com/executable-jar-with-maven)  
