--- a/_posts/2020-03-27-web-mvn.md
+++ b/_posts/2020-03-27-web-mvn.md
@@ -96,4 +96,14 @@ pom.xml:
       </properties>
 
 
+### idea中使用lombak
 
+   1. 安装Lombok Plugin 插件
+   2. 重启
+   3. Setting | Build, Execution, Deployment | Compiler | Annotation Processors
+      打开Enable annotation processing
+   4. Setting | Build, Execution, Deployment | Compiler
+      Shared build process VM options: -Djps.track.ap.dependencies=false
+      User-local build process VM options (overrides Shared options): -Djps.track.ap.dependencies=false
+
+   [Lombok Does not work with IntelliJ EAP 2020.3 Build 203.4203.26](https://github.com/rzwitserloot/lombok/issues/2592)  
