--- a/_posts/2020-07-23-java-mvn.md
+++ b/_posts/2020-07-23-java-mvn.md
@@ -63,13 +63,29 @@ onejar-maven-plugin
 
 
 ### maven 设置javac 选项
-<compilerArgs>
-  <arg>-Xmaxerrs</arg>
-  <arg>1000</arg>
-  <arg>-Xlint</arg>
-  <arg>-J-Duser.language=en_us</arg>
-</compilerArgs>
 
+    <compilerArgs>
+      <arg>-Xmaxerrs</arg>
+      <arg>1000</arg>
+      <arg>-Xlint</arg>
+      <arg>-J-Duser.language=en_us</arg>
+    </compilerArgs>
+
+    
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <verbose>true</verbose>
+          <fork>true</fork>
+          <compilerArgs>
+            <arg>-g</arg>
+          </compilerArgs>
+          <executable>javac</executable>
+          <compilerVersion>1.8</compilerVersion>
+        </configuration>
+      </plugin>
 
 ### Reference
 [Apache Maven Project](http://maven.apache.org/guides/getting-started/maven-in-five-minutes.html)  
@@ -77,4 +93,5 @@ onejar-maven-plugin
 [Maven将代码及依赖打成一个Jar包的方式](https://www.cnblogs.com/zhangwuji/p/10040834.html)  
 [Maven3种打包方式之一maven-assembly-plugin的使用](https://www.cnblogs.com/xd502djj/p/12162335.html)  
 [mvn assembly:single打包报错:Error reading assemblies: No assembly descriptors found](https://blog.csdn.net/znsqingfeng/article/details/51302033)  
+[compiler:compile](http://maven.apache.org/plugins/maven-compiler-plugin/compile-mojo.html#compilerArgs)  
 
