--- a/Categories/Lang/2020-07-23-java-mvn.md
+++ b/Categories/Lang/2020-07-23-java-mvn.md
@@ -79,6 +79,40 @@ onejar-maven-plugin
         </configuration>
       </plugin>
 
+### Maven jdb 
+
+    // Java Application
+    mvn exec:exec -Dexec.executable="java" -Dexec.args="-classpath %classpath -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=1044 com.mycompany.app.App"
+    mvn -Dtest=MySuperClassTest -Dmaven.surefire.debug test
+
+    // Spring Boot Application
+    <project>
+      ...
+      <build>
+        ...
+        <plugins>
+          ...
+          <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>2.2.1.RELEASE</version>
+            <configuration>
+              <jvmArguments>
+                -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005
+              </jvmArguments>
+            </configuration>
+            ...
+          </plugin>
+          ...
+        </plugins>
+        ...
+      </build>
+      ...
+    </project>
+
+    mvn spring-boot:run -Dspring-boot.run.jvmArguments="-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005"
+
+
 ### Reference
 [Apache Maven Project](http://maven.apache.org/guides/getting-started/maven-in-five-minutes.html)  
 [How to Create an Executable JAR with Maven](https://www.baeldung.com/executable-jar-with-maven)  
@@ -87,3 +121,4 @@ onejar-maven-plugin
 [mvn assembly:single打包报错:Error reading assemblies: No assembly descriptors found](https://blog.csdn.net/znsqingfeng/article/details/51302033)  
 [compiler:compile](http://maven.apache.org/plugins/maven-compiler-plugin/compile-mojo.html#compilerArgs)  
 
+[Spring Boot Maven Plugin Documentation](https://docs.spring.io/spring-boot/docs/current/maven-plugin/reference/htmlsingle/)
