--- a/Categories/Web/2020-12-12-web-ser.md
+++ b/Categories/Web/2020-12-12-web-ser.md
@@ -143,6 +143,15 @@ faultcode:
 2. service.port.name  得到portType.name
 3. 调用portType.operation.name
 
+### REST
+
+> REST即表述性状态传递（英文：Representational State Transfer，简称REST）是  
+> Roy Fielding博士在2000年他的博士论文中提出来的一种软件架构风格。它是一种针对网
+> 络应用的设计和开发方式，可以降低开发的复杂性，提高系统的可伸缩性。
+
+> 在三种主流的Web服务实现方案中，因为REST模式的Web服务与复杂的SOAP和XML-RPC对比
+> 来讲明显的更加简洁，越来越多的web服务开始采用REST风格设计和实现。例如，
+> Amazon.com提供接近REST风格的Web服务进行图书查找；雅虎提供的Web服务也是REST风格的。
 
 ## Reference
 [Web Services Description Language (WSDL) 1.1](https://www.w3.org/TR/wsdl.html#:~:text=WSDL%20is%20an%20XML%20format,format%20to%20define%20an%20endpoint.)  
@@ -152,3 +161,5 @@ faultcode:
 [Difference between Axis2 webservice and CXF web service](https://stackoverflow.com/questions/14933374/difference-between-axis2-webservice-and-cxf-web-service#:~:text=The%20main%20differences%20between%20axis2,%2C%20and%20WS%2DI%20BasicProfile.&text=Axis2%20supports%20a%20wider%20range,own%20native%20data%20binding%2C%20ADB)  
 [Springboot 集成 webservice Client](https://segmentfault.com/a/1190000022242887)  
 [WebXml](http://www.webxml.com.cn/zh_cn/web_services.aspx)  
+[WS-REST](http://www.ws-rest.org/)  
+[RESTful API 设计指南](http://www.ruanyifeng.com/blog/2014/05/restful_api.html)  
