--- a/Categories/Web/2020-12-12-web-ser.md
+++ b/Categories/Web/2020-12-12-web-ser.md
@@ -138,6 +138,8 @@ faultcode:
 * -p 产生源码包名
 * -encoding 编码
 
+    wsimport -s ~/Downloads -d ~/Downloads/class/ -p com.equick.equickorder.integration.wsdl.correios -encoding utf-8 http://webservice.correios.com.br/service/rastro/Rastro.wsdl
+
 类的调用顺序是根据WSDL中定义来的:
 1. service.name
 2. service.port.name  得到portType.name
