change theme to TeXt

--- a/_posts/2020-07-27-java-exec.md
+++ b/_posts/2020-07-27-java-exec.md
@@ -8,6 +8,13 @@ date: 2020-07-27
 
 ## Java exec
 
+### macOS JAVA env
+
+    /Library/Java/JavaVirtualMachines
+
+    sudo cp -r /usr/local/opt/openjdk@8/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk-8.jdk
+    sudo ln -sfn /usr/local/opt/openjdk@8/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk-8.jdk
+
 ### Linux 应用输入输出
 
 Linux分为:
